--- a/frontend/src/css/quasar.variables.sass
+++ b/frontend/src/css/quasar.variables.sass
@@ -12,11 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2
+$primary   : #121212
 $secondary : #26A69A
 $accent    : #9C27B0
 
-$dark      : #1D1D1D
+$darker    : #1e1e24
+$darkest   : #121214
+
+
 
 $positive  : #21BA45
 $negative  : #C10015
