--- a/frontend/src/css/quasar.variables.sass
+++ b/frontend/src/css/quasar.variables.sass
@@ -12,8 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : white
-$secondary : #26A69A
+$primary   : #0273d4
+$secondary : white
 $accent    : #9C27B0
 
 $darker    : #1e1e24
