quinn styling changes

--- a/frontend/src/css/quasar.variables.sass
+++ b/frontend/src/css/quasar.variables.sass
@@ -12,12 +12,15 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #0273d4
+$primary   : #ffffff
 $secondary : white
-$accent    : #9C27B0
+$accent    : #878787
+$gradientEnd: hsl(45, 10%, 95%)
+$gradientStart: hsl(184, 5%, 85%)
 
-$darker    : #1e1e24
-$darkest   : #121214
+$dark: hsl(45, 5%, 45%)
+$darker    : hsl(184, 5%, 45%)
+$darkest   : hsl(184, 5%, 90%)
 
 
 
