attempted to make header bag look better with a gradient as well, and failed because I can't seem to select its parent element.

--- a/frontend/src/css/quasar.variables.sass
+++ b/frontend/src/css/quasar.variables.sass
@@ -19,6 +19,7 @@ $gradientEnd: hsl(45, 40%, 95%)
 $gradientStart: hsl(184, 10%, 85%)
 
 $dark: hsl(45, 40%, 55%)
+$darkAlt: hsl(45, 40%, 75%)
 $darker    : hsl(184, 5%, 45%)
 $darkest   : hsl(184, 5%, 90%)
 
