--- a/frontend/src/css/quasar.variables.sass
+++ b/frontend/src/css/quasar.variables.sass
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #ffffff
-$secondary : white
-$accent    : #878787
+$primary   : hsl(45, 40%, 55%)
+$secondary : #ffffff
+$accent    : hsl(45, 40%, 55%)
 $gradientEnd: hsl(45, 40%, 95%)
 $gradientStart: hsl(184, 10%, 85%)
 
