Clean up styles a bit

--- a/frontend/src/css/quasar.variables.sass
+++ b/frontend/src/css/quasar.variables.sass
@@ -12,6 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
+// TODO: Review these variable names and rename them something semantic
+
 $primary   : hsl(45, 40%, 55%)
 $secondary : #ffffff
 $accent    : hsl(45, 40%, 55%)
